--- a/templates/view_found_bottle.html
+++ b/templates/view_found_bottle.html
@@ -62,7 +62,7 @@
             <tr>
                 <th>序号</th>
                 <th>漂流瓶内容</th>
-                <th>拾取时间</th>
+                <th>被投放时间</th>
             </tr>
         </thead>
         <tbody>
