edit submit_bottle code

--- a/templates/submit_bottle.html
+++ b/templates/submit_bottle.html
@@ -215,7 +215,7 @@
     <a href="/user_profile" class="user-profile-btn">用户资料</a>
     <h2 class="cool-animation">在漂流瓶里提交信息</h2>
     <form id="messageForm" method="post">
-        <textarea name="message" id="messageInput" placeholder="写下你想在漂流瓶中说的话..." required></textarea>
+        <textarea name="message" id="messageInput" placeholder="写下你想在漂流瓶中说的话...&#10;为保护海洋环境，请勿投放不当信息。" required></textarea>
         <input type="submit" value="把漂流瓶扔进大海" id="submitButton" class="cool-animation">
         <p id="sendingMessage" class="cool-animation">正在发送消息...</p>
     </form>
